# mlframework

./: .gitignore  LICENSE  README.md  banca_model_20211005.pkl  mlpipline_datasplit.pptx  model.ipynb  model.py  setup.cfg
mlframework/: datehelper.py  eda.py  eda_demo.ipynb  metrics.ipynb  mlframework.py  mlframework_demo.ipynb  test.ipynb
