[metadata]
name = mlframework
version = 0.0.1
author = Khanh Truong
author_email = truongphanduykhanh@gmail.com
description = Step to step to apply a machine learning model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/truongphanduykhanh/mlframework
project_urls =
    Bug Tracker = https://github.com/truongphanduykhanh/mlframework/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = numpy, pandas, lightgbm, sklearn, matplotlib, seaborn
    

[options.packages.find]
where = src